Crash in [@ -[mozMenuItemAccessible moxIgnoreWithParent:]]
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | + | fixed |
| firefox87 | --- | fixed |
People
(Reporter: aryx, Assigned: morgan)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
|
Details | Review |
Maybe Fission related, all 4 crashes have Fission enabled. (DOMFissionEnabled=1)
Crash report: https://crash-stats.mozilla.org/report/index/67bf183c-94a9-4eb4-864b-b6b5a0210124
Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
Top 10 frames of crashing thread:
0 XUL -[mozMenuItemAccessible moxIgnoreWithParent:] accessible/mac/mozSelectableElements.mm:265
1 XUL -[MOXAccessibleBase isAccessibilityElement] accessible/mac/MOXAccessibleBase.mm:399
2 XUL -[mozAccessible moxFocusedUIElement] accessible/mac/mozAccessible.mm:251
3 XUL -[MOXAccessibleBase accessibilityFocusedUIElement] accessible/mac/MOXAccessibleBase.mm:383
4 AppKit -[NSWindow accessibilityFocusedUIElement]
5 AppKit NSAccessibilityHandleFocusChangedForce
6 AppKit -[NSWindow _realMakeFirstResponder:]
7 XUL nsChildView::TearDownView widget/cocoa/nsChildView.mm:350
8 XUL nsChildView::Destroy widget/cocoa/nsChildView.mm:404
9 XUL nsCocoaWindow::Destroy widget/cocoa/nsCocoaWindow.mm:577
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 3•5 years ago
|
||
| bugherder | ||
We have a high number of these crashes on Beta and the last 2 nighties don't seem to crash anymore with this signature, can we uplift the fix to beta?
| Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9199092 [details]
Bug 1688490: Gather moxParent directly instead of querying the parent of our gecko accessible r?eeejay
Beta/Release Uplift Approval Request
- User impact if declined: Users in current Beta will continue to experience this crash.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This code introduces a null check, no other code is changed.
- String changes made/needed:
Comment on attachment 9199092 [details]
Bug 1688490: Gather moxParent directly instead of querying the parent of our gecko accessible r?eeejay
Crash fix, Approved for 86 beta 5, thanks.
We are still crashing in the last 3 days on Nightly, it seems the patch didn't fix the issue so I am reopening the bug and cancelling the uplift request.
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 8•5 years ago
|
||
Comment 10•5 years ago
|
||
| bugherder | ||
No crash in the last 7 nightly builds, Morgan could you request the uplift to beta please? Thanks
| Assignee | ||
Comment 12•5 years ago
|
||
Comment on attachment 9200743 [details]
Bug 1688490: Make GetNativeFromGeckoAccessible null-safe r?eeejay
Beta/Release Uplift Approval Request
- User impact if declined: Users will continue to experience this crash
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This code adds a null check, does not change behaviour for users other than to fix crash
- String changes made/needed:
| Assignee | ||
Comment 13•5 years ago
|
||
I'm not sure how to request uplift for both patches, but if this one is uplift approved, we'll need to uplift the other patch on this bug as well.
Comment on attachment 9199092 [details]
Bug 1688490: Gather moxParent directly instead of querying the parent of our gecko accessible r?eeejay
Approved for 86 beta 8, thanks.
Comment 15•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Description
•