Bug 1688490: Gather moxParent directly instead of querying the parent of our gecko accessible r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D102965